2022/korea/day1/k8s/stress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: skills
  name: stress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.response-403: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"403","messageBody":"403 ERROR"}}
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /v1
          pathType: Prefix
          backend:
            service:
              name: stress
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: response-403
              port:
                name: use-annotation
